# agent-sim

./: .gitignore  AGENTS.md  README.md  flake.nix  prd.md
docs/: # constraints for the runtime.md  PRD.md  agent-guide.md  agent-migration-prompt.md  dll_contract.md  env-daemon-prd.md  next-steps.md  prd-flash-and-device-config.md  prd.md  (+5 more)
runtime/: Cargo.toml
runtime/src/: connection.rs  error.rs  internal_cli.rs  ipc.rs  lib.rs  main.rs  name.rs  process.rs  protocol.rs  signal_selectors.rs  trace.rs
runtime/src/can/: dbc.rs  mod.rs
runtime/src/can/backend/: mod.rs  peak.rs  socketcan.rs
runtime/src/cli/: args.rs  commands.rs  env.rs  error.rs  mod.rs  output.rs  recipe.rs
runtime/src/config/: error.rs  mod.rs  recipe.rs
runtime/src/daemon/: error.rs  lifecycle.rs  mod.rs  server.rs
runtime/src/daemon/server/: action_router.rs  can_ops.rs  shared_ops.rs  tick_ops.rs
runtime/src/envd/: error.rs  lifecycle.rs  mod.rs  server.rs  spec.rs
runtime/src/envd/server/: bootstrap.rs  dispatch.rs  instance_worker.rs  tick.rs
runtime/src/load/: mod.rs  resolve.rs
runtime/src/shared/: mod.rs
runtime/src/sim/: error.rs  init.rs  instance.rs  instance_manager.rs  mod.rs  project.rs  project_loader.rs  time.rs  types.rs  validation.rs
runtime/tests/: cli_can.rs  cli_can_dbc.rs  cli_env.rs  cli_env_signals_trace.rs  cli_flash.rs  cli_multi_session_recipe.rs  cli_project_instance.rs  cli_recipe_assert.rs  cli_recipes.rs  cli_session_daemon.rs  cli_shared.rs  cli_signal_io.rs  cli_time.rs  cli_trace.rs  json_contract.rs
runtime/tests/common/: mod.rs
(+15 files in other folders)
