[package]
name = "agent-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
can-dbc = "8"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "6"
globset = "0.4"
libc = "0.2"
libloading = "0.8"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
